# examplerepo

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.dbx/: project.json
.github/workflows/: azure_login.yml  merge_branch.yml  push_branch.yml
conf/: deployment.yml
conf/test/: sample_etl_config.yml  sample_ml_config.yml
examplerepo/: common.py
examplerepo/helperfunctions/: combine_pandas_dataframes.py
examplerepo/tasks/: sample_etl_task.py  sample_ml_task.py
examplerepo/testdata/create/: googletrends.py  simulation.py
examplerepo/testdata/samples/: googletrends_vegetables_fruit.csv  import_netherlands_strawberries.csv
tests/unit/: conftest.py  test_dbx_task_configuration.py  test_download_googletrends.py  test_simulation.py
